# shortener

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json  rollup.config.js  tailwind.config.js  tsconfig.json
client/: App.svelte  Tailwind.svelte  main.js
public/: index.html
src/: main.rs  repository.rs
