[package]
name = "rocket"
version = "0.1.0"
authors = ["Jake Runzer <jakerunzer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
harsh = "0.2.1"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
rocket_contrib = { version = "0.4.10", features = ["json"] }
